--- a/index.qmd
+++ b/index.qmd
@@ -3,11 +3,14 @@ title: "Meeting AEA Replication Standards using Quarto"
 subtitle: "Workshop for Department of Economics, Monash University (Jul 18-20, 2023)"
 ---
 
-<!-- ## Post-Workshop Feedback -->
+## Post-Workshop Feedback
 
-## Pre-Workshop Tasks
-
-See [Pre-work](00-pre-workshop.qmd) for tasks to complete before the workshop.
+::: callout-note
+# Feedback form
+Thank you for attending the workshop.
+Please take 5 minutes to fill out a short survey to help me improve in the future: 
+<https://forms.gle/6EfKWSMjYpgycXgC9>
+:::
 
 ## Workshop Details
 
@@ -28,3 +31,12 @@ See [Pre-work](00-pre-workshop.qmd) for tasks to complete before the workshop.
 ------------------------------------------------------------------------
 
 ![](https://i.creativecommons.org/l/by/4.0/88x31.png) This work is licensed under a [Creative Commons Attribution 4.0 International License](https://creativecommons.org/licenses/by/4.0/). See repository [README](https://github.com/cynthiahqy/monash-quarto-aea) for more details.
+
+## Pre-Workshop Tasks
+
+See [Pre-work](00-pre-workshop.qmd) for tasks to complete before the workshop.
+
+::: callout-tip
+## Post-Workshop Update
+Git and GitHub were not used in this workshop. The Website modules were updated to use Netlify Drop instead of Git and GitHub.
+:::
