--- a/index.qmd
+++ b/index.qmd
@@ -12,6 +12,11 @@ Please take 5 minutes to fill out a short survey to help me improve in the futur
 <https://forms.gle/6EfKWSMjYpgycXgC9>
 :::
 
+## Follow Up Session
+
+- **Date and Time**: 1-2PM, Friday, Aug 11 2023
+- **Location:** Caulfield Campus, Room TBC
+
 ## Workshop Details
 
 **Location:** Caulfield Campus, Building H, room H4.87
